チャットUIの改善

--- a/public/embed.html
+++ b/public/embed.html
@@ -6,9 +6,8 @@
 </head>
 
 <body>
-  <!-- <iframe src="http://localhost:3000/chats" name="sample" width="600" height="700"></iframe> -->
   <div style="width:100%; text-align:center;">
-    <iframe src="http://160.16.208.157/chats" name="donusagi" width="600" height="700"></iframe>
+    <iframe src="http://localhost:3000/chats" name="sample" width="450" height="550"></iframe>
   </div>
 </body>
 </html>
