チャット画面を埋め込み出来るようにする

--- a/public/embed.html
+++ b/public/embed.html
@@ -8,7 +8,7 @@
 <body>
   <div style="width:100%; text-align:center;">
     <!-- <iframe src="http://localhost:3000/chats" name="sample" width="450" height="550"></iframe> -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/d4fda205272f7d9edf774e5e309a346b073cac4e1105e3bf1f0f9ecfd3d1745f" frameborder="0" allowfullscreen></iframe>
+    <iframe width="560" height="315" src="http://localhost:3000/embed/d4fda205272f7d9edf774e5e309a346b073cac4e1105e3bf1f0f9ecfd3d1745f/chats" style="border:solid 1px #c0c0c0;" allowfullscreen></iframe>
   </div>
 </body>
 </html>
