embedのサイズをフォームから変更することが出来る

--- a/public/embed.html
+++ b/public/embed.html
@@ -9,6 +9,7 @@
   <div style="width:100%; text-align:center;">
     <!-- <iframe src="http://localhost:3000/chats" name="sample" width="450" height="550"></iframe> -->
     <iframe width="500" height="500" src="http://localhost:3000/embed/a83d7b442d27e53dc90827d90a93a4fff8ecaf46fa87c623b8dff3a1344f9e89/chats" style="border:solid 1px #c0c0c0;" allowfullscreen></iframe>
+    <iframe width="500" height="590" src="http://localhost:3000/embed/a83d7b442d27e53dc90827d90a93a4fff8ecaf46fa87c623b8dff3a1344f9e89/chats" style="border:solid 1px #c0c0c0;" allowfullscreen></iframe>
   </div>
 </body>
 </html>
