--- a/public/500.html
+++ b/public/500.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>500 Internal Server Error</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
   <style>
   @charset "UTF-8";
